# PriceExtractionCLI

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
price_extractor/: extractor.py  file_handler.py  llama_server.py  table_printer.py
